Revision history for Perl extension Alien::wxWidgets.

0.66  TBR

0.65  Mon Mar 31 2014
    - Update default to wxWidgets 3.0.0
    - build on MacOSX Mavericks with Xcode 4.6.3
    - install builtins on wxMSW (used by some wxWidgets extensions)

0.64  Sat Apr 13 2013
    - Build IPC on Windows

0.63  Fri Oct 26 2012
    - Patches for wxGTK build fixing dir dialog issues

0.62  Tue Oct 2 2012
    - Fix patching on MSWin when buildpaths have spaces.
    - Allow addition of user patch - --wxWidgets-userpatch
    - Expand README.txt
    - Another Mac OS X SDK change

0.61  Fri Sep 21 2012
    - change default debug level for wxWidgets >= 2.9 to 1 ( was 0)
    - fix several incorrect wxWidgets version checks 

0.60  Fri Aug 24 2012
    - allow building 2.9.4
    - correct SDKs for Mountain Lion
    - fixes for XCode 4.4

0.59  Tue May 01 2012
    - Version sub modules to keep meta info users happy

0.58  Thu Apr 12 2012
    - WXWIN / WXDIR MSWin32 fix.

0.57  Tue Mar 27 2012
    - fix for osx-cocoa overlay drawing in 2.9.x
    - Return --with-osx_cocoa . --with-mac on better basis.
    - several fixes for default macosx builds

0.56  Fri Mar 16 2012
    - add propgrid ribbon webview library names

0.55  Tue Feb 28 2012
    - Correctly interpret boolean option = 1 as 'yes' 
      ( Thanks to Robert Olsen )  
    - Fix for msw builds where Perl defines -D_USE_32BIT_TIME_T 
      ( Thanks to Bjoern Hoehrmann )
    - Fix for Xcode 4.3 on OSX Lion
    - Allow build 2.9.3 wxWidgets (default for 64 bit Mac)

0.54  Wed Nov 09 08:00:00 BST 2011
    - Remove force of static binding for mingw libgcc & libstdc++
    - For mingw, properly detect the gcc shared lib dependencies
      to install
0.53  Thu Oct 13 08:00:00 BST 2011 
    - SDK fix for 2.8.x on Mac OSX Lion
    - 2.9.2 default for 64bit MacOSX
    - 2.9.2 build changes for msw supporting mingw/gcc >= 4.5.2
    - 2003 Platform SDK build fixed for 2.8.12

0.52  Thu May 05 08:00:00 BST 2011
    - release 0.51_01 as 0.52
